# semantic-house-recommender

./: .gitignore  README.md  docker-compose.yml  main.py
backend/: Dockerfile  apiapp.py  pyproject.toml
frontend/: Dockerfile  index.html  metadata.json  server.ts  vite.config.ts
frontend/src/: App.tsx  data.ts  index.css  types.ts
notebooks/: 01 EDA.ipynb  02 model.ipynb  03 eval-dataset-creation.ipynb  04 evaluation.ipynb
