[project]
name = "apartments-for-rent"
version = "0.1.0"
description = "recommendation system based on semantic search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastparquet",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]
